feat: show language mismatch popup on select message not in L2

--- a/lib/l10n/intl_be.arb
+++ b/lib/l10n/intl_be.arb
@@ -1915,7 +1915,7 @@
   "playWithAI": "Пакуль гуляйце з ШІ",
   "courseStartDesc": "Pangea Bot гатовы да працы ў любы час!\n\n...але навучанне лепш з сябрамі!",
   "@@locale": "be",
-  "@@last_modified": "2025-12-03 10:30:13.500676",
+  "@@last_modified": "2025-12-03 11:36:45.348859",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11732,6 +11732,11 @@
     }
   },
   "@pickDifferentActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "messageLanguageMismatchMessage": "Ваша мэтавая мова не супадае з гэтым паведамленнем. Абнавіць вашу мэтавую мову?",
+  "@messageLanguageMismatchMessage": {
     "type": "String",
     "placeholders": {}
   }
