--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ar",
-  "@@last_modified": "2025-12-03 10:30:28.531390",
+  "@@last_modified": "2025-12-03 11:36:55.312756",
   "about": "حول",
   "@about": {
     "type": "String",
@@ -10850,6 +10850,11 @@
     }
   },
   "@pickDifferentActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "messageLanguageMismatchMessage": "لغة الهدف الخاصة بك لا تتطابق مع هذه الرسالة. هل تريد تحديث لغة الهدف الخاصة بك؟",
+  "@messageLanguageMismatchMessage": {
     "type": "String",
     "placeholders": {}
   }
