--- a/lib/l10n/intl_cs.arb
+++ b/lib/l10n/intl_cs.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "cs",
-  "@@last_modified": "2025-12-03 10:30:09.271970",
+  "@@last_modified": "2025-12-03 11:36:43.008688",
   "about": "O aplikaci",
   "@about": {
     "type": "String",
@@ -11240,6 +11240,11 @@
     }
   },
   "@pickDifferentActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "messageLanguageMismatchMessage": "Jazyk cíle neodpovídá této zprávě. Chcete aktualizovat svůj cílový jazyk?",
+  "@messageLanguageMismatchMessage": {
     "type": "String",
     "placeholders": {}
   }
