--- a/lib/l10n/intl_eo.arb
+++ b/lib/l10n/intl_eo.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-03 10:31:03.548316",
+  "@@last_modified": "2025-12-03 11:37:15.815743",
   "about": "Prio",
   "@about": {
     "type": "String",
@@ -11722,6 +11722,11 @@
     }
   },
   "@pickDifferentActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "messageLanguageMismatchMessage": "Via celolingvo ne kongruas kun ĉi tiu mesaĝo. Ĉu ĝisdatigi vian celolingvon?",
+  "@messageLanguageMismatchMessage": {
     "type": "String",
     "placeholders": {}
   }
