--- a/lib/l10n/intl_he.arb
+++ b/lib/l10n/intl_he.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-03 10:29:47.561493",
+  "@@last_modified": "2025-12-03 11:36:29.117862",
   "about": "אודות",
   "@about": {
     "type": "String",
@@ -11682,6 +11682,11 @@
     }
   },
   "@pickDifferentActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "messageLanguageMismatchMessage": "שפת היעד שלך אינה תואמת את ההודעה הזו. האם לעדכן את שפת היעד שלך?",
+  "@messageLanguageMismatchMessage": {
     "type": "String",
     "placeholders": {}
   }
