--- a/lib/l10n/intl_hu.arb
+++ b/lib/l10n/intl_hu.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "hu",
-  "@@last_modified": "2025-12-03 10:29:32.057483",
+  "@@last_modified": "2025-12-03 11:36:20.356699",
   "about": "Névjegy",
   "@about": {
     "type": "String",
@@ -10634,6 +10634,11 @@
     }
   },
   "@pickDifferentActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "messageLanguageMismatchMessage": "A cél nyelve nem egyezik meg ezzel az üzenettel. Frissíti a cél nyelvét?",
+  "@messageLanguageMismatchMessage": {
     "type": "String",
     "placeholders": {}
   }
