--- a/lib/l10n/intl_ia.arb
+++ b/lib/l10n/intl_ia.arb
@@ -1962,7 +1962,7 @@
   "playWithAI": "Joca con le IA pro ora",
   "courseStartDesc": "Pangea Bot es preste a comenzar a qualunque momento!\n\n...ma apprender es melior con amicos!",
   "@@locale": "ia",
-  "@@last_modified": "2025-12-03 10:29:49.294834",
+  "@@last_modified": "2025-12-03 11:36:30.210370",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11711,6 +11711,11 @@
     }
   },
   "@pickDifferentActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "messageLanguageMismatchMessage": "Tua lingua target non concordat cum hoc nuntio. Renovare tuam linguam target?",
+  "@messageLanguageMismatchMessage": {
     "type": "String",
     "placeholders": {}
   }
