--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-03 10:30:04.563615",
+  "@@last_modified": "2025-12-03 11:36:40.442034",
   "about": "Informazioni",
   "@about": {
     "type": "String",
@@ -10636,6 +10636,11 @@
     }
   },
   "@pickDifferentActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "messageLanguageMismatchMessage": "La tua lingua di destinazione non corrisponde a questo messaggio. Vuoi aggiornare la tua lingua di destinazione?",
+  "@messageLanguageMismatchMessage": {
     "type": "String",
     "placeholders": {}
   }
