--- a/lib/l10n/intl_nb.arb
+++ b/lib/l10n/intl_nb.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-03 10:30:10.936757",
+  "@@last_modified": "2025-12-03 11:36:44.135739",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11726,6 +11726,11 @@
     }
   },
   "@pickDifferentActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "messageLanguageMismatchMessage": "Mål språket ditt samsvarer ikke med denne meldingen. Vil du oppdatere målspråket ditt?",
+  "@messageLanguageMismatchMessage": {
     "type": "String",
     "placeholders": {}
   }
