--- a/lib/l10n/intl_yue.arb
+++ b/lib/l10n/intl_yue.arb
@@ -1860,7 +1860,7 @@
   "selectAll": "全選",
   "deselectAll": "取消全選",
   "@@locale": "yue",
-  "@@last_modified": "2025-12-03 10:30:02.789794",
+  "@@last_modified": "2025-12-03 11:36:39.120785",
   "@ignoreUser": {
     "type": "String",
     "placeholders": {}
@@ -11724,6 +11724,11 @@
     }
   },
   "@pickDifferentActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "messageLanguageMismatchMessage": "您的目標語言與此消息不匹配。要更新您的目標語言嗎？",
+  "@messageLanguageMismatchMessage": {
     "type": "String",
     "placeholders": {}
   }
