--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "zh",
-  "@@last_modified": "2025-12-03 10:30:45.297060",
+  "@@last_modified": "2025-12-03 11:37:06.135839",
   "about": "关于",
   "@about": {
     "type": "String",
@@ -10624,6 +10624,11 @@
     }
   },
   "@pickDifferentActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "messageLanguageMismatchMessage": "您的目标语言与此消息不匹配。要更新您的目标语言吗？",
+  "@messageLanguageMismatchMessage": {
     "type": "String",
     "placeholders": {}
   }
