Add a gender value to the user settings

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4990,5 +4990,9 @@
     }
   },
   "pickDifferentActivity": "Pick a different activity",
-  "messageLanguageMismatchMessage": "Your target language doesn't match this message. Update your target language?"
+  "messageLanguageMismatchMessage": "Your target language doesn't match this message. Update your target language?",
+  "woman": "woman",
+  "man": "man",
+  "otherGender": "other",
+  "unselectedGender": "Please select a gender option"
 }
