feat: initial work for deleting lemmas from analytics

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4990,5 +4990,6 @@
     }
   },
   "pickDifferentActivity": "Pick a different activity",
-  "messageLanguageMismatchMessage": "Your target language doesn't match this message. Update your target language?"
+  "messageLanguageMismatchMessage": "Your target language doesn't match this message. Update your target language?",
+  "blockLemmaConfirmation": "This vocab word will be permanently removed from your analytics"
 }
