Remove instructions from chat view, and add profile explanation to course participant page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4679,7 +4679,6 @@
   "writingAnalyticsDesc": "Send messages to practice writing.",
   "endActivity": "End activity",
   "allLanguages": "All languages",
-  "chatListTooltip": "Here you’ll find your direct messages! Click on any user’s avatar and “start conversation” to send a DM.",
   "directMessageBotTitle": "Direct message Pangea Bot",
   "feedbackTitle": "Activity Feedback",
   "feedbackRespDesc": "Check back tomorrow for activity updates.",
@@ -4996,5 +4995,6 @@
   "man": "Man",
   "otherGender": "Other",
   "unselectedGender": "Select a gender option",
-  "gender": "Gender"
+  "gender": "Gender",
+  "courseParticipantTooltip": "This is everybody in this course. Click on any user’s avatar and “start conversation” to send a DM."
 }
